--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a class="btn btn-block-sm btn-warning" href="#form" role="button">Reserve Table</a>
+                </div>                
+
             </div>
         </div>
     </header>
@@ -55,7 +59,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -71,11 +75,17 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class = "col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p  class = "d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class = "col col-sm order-sm-first col-md">
+                    <div class="media">
+                        <img class="d-flex mr-3 img-thumbnail align-self-center"src="img/buffet.png" alt="Buffet">
+                        <div class="media-body order-sm-first">
+                            <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                            <p  class = "d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-
+        </div>    
         <div class = "row row-content align-items-center">
             <div class ="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
@@ -91,11 +101,65 @@
                             International experience having worked closely with
                             whos-who in the culinary world, he specializes in
                             creating mouthwatering Indo-Italian fusion experiences.
-                            </p>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class = "row row-content align-items-center">
+            <div class = "col-sm-2">
+            </div>
+            <div class = "col-12 col-sm-8">
+                <div class="card">
+                    <h5 class="card-header bg-warning text-white mb-3">Reserve a Table</h5>
+                    <div class="card-body">
+                        <form id = "form">
+                            <div class="form-group row">
+                                <label for="staticEmail" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                                <div class="col-12 col-sm-6">
+                                    <div class="form-check form-check-inline">    
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                        <label class="form-check-label" for="exampleRadios1">1</label>
+                                    </div>   
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                        <label class="form-check-label" for="exampleRadios1">2</label> 
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                        <label class="form-check-label" for="exampleRadios1"> 3 </label>  
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                        <label class="form-check-label" for="exampleRadios1"> 4 </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                        <label class="form-check-label" for="exampleRadios1"> 5 </label>                                    
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                        <label class="form-check-label" for="exampleRadios1"> 6 </label>
+                                    </div>                                                                      
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="inputPassword" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                                <div class = "col-12 col-sm-3">
+                                    <input type="text" class="form-control" id="Date" name="Date" placeholder="Date">
+                                </div>
+                                <div class = "col-12 col-sm-3">
+                                    <input type="text" class="form-control" id="Time" name = "Time"placeholder="Time">    
+                                </div>
+                            </div>
+                            <a href="#" class="btn btn-primary offset-2">Reserve</a>
+                        </form>
+                    </div>
+                </div>   
+            </div>
+            <div class ="col-sm-2"></div>
+        </div>         
+                    
     </div>
 
     <footer class = "footer">
