--- a/index.html
+++ b/index.html
@@ -28,9 +28,118 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                    <span class="fa fa-sign-in"></span> Login</a>
+                </span>
             </div>                
         </div>
-    </nav>    
+    </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>        
+    <div id="ReserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form id = "form">
+                        <div class="form-group row">
+                            <label for="staticEmail" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                            <div class="col-12 col-sm-6">
+                                <div class="form-check form-check-inline">    
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                    <label class="form-check-label" for="exampleRadios1">1</label>
+                                </div>   
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                    <label class="form-check-label" for="exampleRadios1">2</label> 
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                    <label class="form-check-label" for="exampleRadios1"> 3 </label>  
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                    <label class="form-check-label" for="exampleRadios1"> 4 </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                    <label class="form-check-label" for="exampleRadios1"> 5 </label>                                    
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
+                                    <label class="form-check-label" for="exampleRadios1"> 6 </label>
+                                </div>                                                                      
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="inputPassword" class="col-12 col-sm-2 col-form-label">Section</label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-block-sm btn-success active">
+                                <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
+                                </label>
+                                <label class="btn btn-block-sm btn-danger">
+                                <input type="radio" name="options" id="option2" autocomplete="off">Smoking
+                                </label>
+                            </div>
+                        </div>                        
+                        <div class="form-group row">
+                            <label for="inputPassword" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                            <div class = "col-12 col-sm-3">
+                                <input type="text" class="form-control" id="Date" name="Date" placeholder="Date">
+                            </div>
+                            <div class = "col-12 col-sm-3">
+                                <input type="text" class="form-control" id="Time" name = "Time"placeholder="Time">    
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-block-sm btn-secondary offset-2" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-block-sm btn-primary">Reserve</button>
+                    </form>    
+                </div>
+            </div>
+        </div>
+    </div>       
+
+
+
+
     <header class = "jumbotron">
         <div class = "container">
             <div class = "row row-header">
@@ -42,14 +151,67 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a class="btn btn-block-sm btn-warning" href="#form" role="button">Reserve Table</a>
+                    <a class="btn btn-block btn-warning" role="button" data-toggle="modal" data-target="#ReserveModal">Reserve Table</a> 
                 </div>                
-
             </div>
         </div>
     </header>
 
     <div class = "container">
+        <div class="row row-content">
+           <div class="col">
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid"
+                                src="img/uthappizza.png" alt="Uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                    Italian pizza, topped with Cerignola olives, ripe vine
+                                    cherry tomatoes, Vidalia onion, Guntur chillies and
+                                    Buffalo Paneer.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid"src="img/buffet.png" alt="Buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                    International experience having worked closely with
+                                    whos-who in the culinary world, he specializes in
+                                    creating mouthwatering Indo-Italian fusion experiences.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto Somayya">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                    International experience having worked closely with
+                                    whos-who in the culinary world, he specializes in
+                                    creating mouthwatering Indo-Italian fusion experiences.
+                                </p>
+                            </div>
+                        </div>                                                
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>                    
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>  
+                </div>              
+            </div>
+       </div>
         <div class = "row row-content align-items-center">
             <div class ="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -105,61 +267,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class = "row row-content align-items-center">
-            <div class = "col-sm-2">
-            </div>
-            <div class = "col-12 col-sm-8">
-                <div class="card">
-                    <h5 class="card-header bg-warning text-white mb-3">Reserve a Table</h5>
-                    <div class="card-body">
-                        <form id = "form">
-                            <div class="form-group row">
-                                <label for="staticEmail" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-                                <div class="col-12 col-sm-6">
-                                    <div class="form-check form-check-inline">    
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                        <label class="form-check-label" for="exampleRadios1">1</label>
-                                    </div>   
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                        <label class="form-check-label" for="exampleRadios1">2</label> 
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                        <label class="form-check-label" for="exampleRadios1"> 3 </label>  
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                        <label class="form-check-label" for="exampleRadios1"> 4 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                        <label class="form-check-label" for="exampleRadios1"> 5 </label>                                    
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                        <label class="form-check-label" for="exampleRadios1"> 6 </label>
-                                    </div>                                                                      
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputPassword" class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                                <div class = "col-12 col-sm-3">
-                                    <input type="text" class="form-control" id="Date" name="Date" placeholder="Date">
-                                </div>
-                                <div class = "col-12 col-sm-3">
-                                    <input type="text" class="form-control" id="Time" name = "Time"placeholder="Time">    
-                                </div>
-                            </div>
-                            <a href="#" class="btn btn-primary offset-2">Reserve</a>
-                        </form>
-                    </div>
-                </div>   
-            </div>
-            <div class ="col-sm-2"></div>
-        </div>         
-                    
+        </div>                
     </div>
 
     <footer class = "footer">
