--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->  
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar" >
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a role="button" id="Login1">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>                
@@ -41,7 +41,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" id="Cancel2">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -57,13 +57,13 @@
                             <div class="col-sm-auto">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox">
-                                    <label class="form-check-label"> Remember me
+                                    <label class="form-check-label" id="R"> Remember me
                                     </label>
                                 </div>
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" id="Cancel3">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
                         </div>
                     </form>
@@ -76,42 +76,42 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve Table</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" id="Cancel1">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form id = "form">
                         <div class="form-group row">
-                            <label for="staticEmail" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                            <label for="staticEmail" class="col-12 col-sm-2 col-form-label" style="color:black">Number of Guests</label>
                             <div class="col-12 col-sm-6">
                                 <div class="form-check form-check-inline">    
                                     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                    <label class="form-check-label" for="exampleRadios1">1</label>
+                                    <label class="form-check-label" for="exampleRadios1" style="color:black">1</label>
                                 </div>   
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                    <label class="form-check-label" for="exampleRadios1">2</label> 
+                                    <input class="form-check-input" type="radio" name="exampleRadios2" id="exampleRadios2">
+                                    <label class="form-check-label" for="exampleRadios2" style="color:black">2</label> 
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                    <label class="form-check-label" for="exampleRadios1"> 3 </label>  
+                                    <input class="form-check-input" type="radio" name="exampleRadios3" id="exampleRadios3">
+                                    <label class="form-check-label" for="exampleRadios3" style="color:black"> 3 </label>  
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                    <label class="form-check-label" for="exampleRadios1"> 4 </label>
+                                    <input class="form-check-input" type="radio" name="exampleRadios4" id="exampleRadios4">
+                                    <label class="form-check-label" for="exampleRadios4" style="color:black"> 4 </label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                    <label class="form-check-label" for="exampleRadios1"> 5 </label>                                    
+                                    <input class="form-check-input" type="radio" name="exampleRadios5" id="exampleRadios5">
+                                    <label class="form-check-label" for="exampleRadios5" style="color:black"> 5 </label>                                    
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
-                                    <label class="form-check-label" for="exampleRadios1"> 6 </label>
+                                    <input class="form-check-input" type="radio" name="exampleRadios6" id="exampleRadios6">
+                                    <label class="form-check-label" for="exampleRadios6" style="color:black"> 6 </label>
                                 </div>                                                                      
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="inputPassword" class="col-12 col-sm-2 col-form-label">Section</label>
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <label for="inputPassword" class="col-12 col-sm-2 col-form-label" style="color:black">Section</label>
+                            <div class="btn-group btn-group-toggle"data-toggle="buttons">
                                 <label class="btn btn-block-sm btn-success active">
                                 <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
                                 </label>
@@ -121,7 +121,7 @@
                             </div>
                         </div>                        
                         <div class="form-group row">
-                            <label for="inputPassword" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                            <label for="inputPassword" class="col-12 col-sm-2 col-form-label" style="color:black">Date and Time</label>
                             <div class = "col-12 col-sm-3">
                                 <input type="text" class="form-control" id="Date" name="Date" placeholder="Date">
                             </div>
@@ -129,7 +129,7 @@
                                 <input type="text" class="form-control" id="Time" name = "Time"placeholder="Time">    
                             </div>
                         </div>
-                        <button type="button" class="btn btn-block-sm btn-secondary offset-2" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-block-sm btn-secondary offset-2" id="Cancel">Cancel</button>
                         <button type="button" class="btn btn-block-sm btn-primary">Reserve</button>
                     </form>    
                 </div>
@@ -150,8 +150,8 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <a class="btn btn-block btn-warning" role="button" data-toggle="modal" data-target="#ReserveModal">Reserve Table</a> 
+                <div class="col-12 col-sm align-self-center"> 
+                    <button type="button" class="btn btn-block btn-warning text-white" id="modal">Reserve Table</button>
                 </div>                
             </div>
         </div>
@@ -160,7 +160,7 @@
     <div class = "container">
         <div class="row row-content">
            <div class="col">
-            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img class="d-block img-fluid"
@@ -208,10 +208,13 @@
                     </a>
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
-                    </a>  
+                    </a> 
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>                   
                 </div>              
             </div>
-       </div>
+        </div>
         <div class = "row row-content align-items-center">
             <div class ="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -312,6 +315,68 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                }
+                else if ($("#carouselButton").children("span").hasClass('fa-play')){
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');                    
+                }
+            });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("#modal").click(function()
+            {
+                $('#ReserveModal').modal()
+            })
+        });    
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("#Login1").click(function()
+            {
+                $('#loginModal').modal()
+            })
+        });    
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("#Cancel1").click(function()
+            {
+                $('#ReserveModal').modal('hide')
+            })
+        });    
+    </script> 
+    <script>
+        $(document).ready(function(){
+            $("#Cancel").click(function()
+            {
+                $('#ReserveModal').modal('hide')
+            })
+        });    
+    </script> 
+    <script>
+        $(document).ready(function(){
+            $("#Cancel2").click(function()
+            {
+                $('#loginModal').modal('hide')
+            })
+        });    
+    </script> 
+    <script>
+        $(document).ready(function(){
+            $("#Cancel3").click(function()
+            {
+                $('#loginModal').modal('hide')
+            })
+        });    
+    </script>  
 </body>
 
 </html>
